// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate from ERC20 token to fiat currency > Then it should return the exchange rate in the requested currency 1`] = `
{
  "__typename": "FiatAmount",
  "name": "USD",
  "symbol": "$",
  "value": Any<e>,
}
`;

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate from fiat to fiat > Then it should return the cross-currency exchange rate 1`] = `
{
  "__typename": "FiatAmount",
  "name": "EUR",
  "symbol": "€",
  "value": Any<e>,
}
`;

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate from native token to fiat currency > Then it should return the exchange rate for native token 1`] = `
{
  "__typename": "FiatAmount",
  "name": "USD",
  "symbol": "$",
  "value": Any<e>,
}
`;

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate to different fiat currencies > Then it should return the exchange rate in EUR 1`] = `
{
  "__typename": "FiatAmount",
  "name": "EUR",
  "symbol": "€",
  "value": Any<e>,
}
`;

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate to different fiat currencies > Then it should return the exchange rate in GBP 1`] = `
{
  "__typename": "FiatAmount",
  "name": "GBP",
  "symbol": "£",
  "value": Any<e>,
}
`;

exports[`Exchange Rate on Aave V4 > Given a user who wants to get exchange rates > When fetching exchange rate to different fiat currencies > Then it should return the exchange rate in USD 1`] = `
{
  "__typename": "FiatAmount",
  "name": "USD",
  "symbol": "$",
  "value": Any<e>,
}
`;
